mern-k8s/front-end/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: frontend
  labels:
    app: react-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: amolsontakke96/front-end:latest   # <-- change to your image
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  namespace: frontend
  name: react-frontend
  labels:
    app: react-frontend
spec:
  type: NodePort
  ports:
    - port: 5173
      targetPort: 5173
      nodePort: 30007
  selector:
    app: react-frontend
